# Reborn-Rebalance

./: .gitignore  README.rst  pyproject.toml
data/: abilities.toml  items.toml  map_names.toml  maps.toml  moves.toml  moves.yaml  tms.toml  trainer_types.toml
data/encounters/: 014_coral_ward.toml  015_apophyll_beach.toml  016_apophyll_beach.toml  018_apophyll_beach.toml  019_apophyll_beach.toml  020_apophyll_beach.toml  021_pyrous_mountain.toml  027_pyrous_mountain.toml  029_opal_ward.toml  030_apophyll_cave.toml  031_apophyll_cave_2f.toml  035_pyrous_mountain_b1f.toml  036_obsidia_ward.toml  037_lower_peridot_ward.toml  041_underground_railnet.toml  046_lower_peridot_ward.toml  052_lower_peridot_alley.toml  058_north_peridot_alley.toml  088_obsidia_slums_b1f.toml  090_obsidia_slums_1f.toml  091_obsidia_slums_2f.toml  097_coral_ward.toml  105_obsidia_alleyway.toml  109_coral_ward.toml  128_onyx_ward.toml  132_malchous_forest_park.toml  135_jasper_ward.toml  149_beryl_ward.toml  150_rhodochrine_jungle.toml  151_beryl_ward.toml  152_beryl_cemetery.toml  153_the_underroot.toml  165_north_obsidia_alleyway.toml  170_lapis_alleyway.toml  178_grand_stairway_b1f.toml  179_grand_stairway_b2f.toml  180_grand_stairway_b3f.toml  184_beryl_cave_1f.toml  185_beryl_cave_b1f.toml  196_underground_railnet.toml  (+207 more)
data/forms/: README.rst  aegislash.toml  basculegion.toml  basculin.toml  burmy.toml  calyrex.toml  castform.toml  deerling.toml  deoxys.toml  dunsparce.toml  eiscue.toml  flabebe.toml  gimmighoul.toml  indeedee.toml  kecleon.toml  lilligant.toml  lycanroc.toml  meowstic.toml  minior.toml  oinkologne.toml  oricorio.toml  palafin.toml  pumpkaboo.toml  rotom.toml  shellos.toml  sinistea.toml  squawkabilly.toml  tandemaus.toml  tatsugiri.toml  toxtricity.toml  unown.toml  urshifu.toml  wishiwashi.toml  wormadam.toml  zacian.toml  zamazenta.toml
data/forms/legends/: kyurem.toml  necrozma.toml  ogerpon.toml  terapagos.toml  zygarde.toml
data/forms/megas/: ampharos.toml  gourgeist.toml  groudon.toml  kyogre.toml
data/forms/mythicals/: hoopa.toml  meloetta.toml  shaymin.toml
data/forms/pulse/: abra.toml  arceus.toml  clawitzer.toml  garbodor.toml  magnezone.toml  swalot.toml  tangrowth.toml
data/forms/regional/: meowth.toml
data/overwritten_maps/: Map063.rxdata  Map124.rxdata  Map150.rxdata  Map152.rxdata  Map169.rxdata  Map234.rxdata  Map368.rxdata  Map432.rxdata  Map678.rxdata  Map734.rxdata
data/species/gen_1/: 0001-bulbasaur.toml  0001-bulbasaur.yaml  0002-ivysaur.toml  0002-ivysaur.yaml  0003-venusaur.toml  0003-venusaur.yaml  0004-charmander.toml  0004-charmander.yaml  0005-charmeleon.toml  0005-charmeleon.yaml  0006-charizard.toml  0006-charizard.yaml  0007-squirtle.toml  0007-squirtle.yaml  0008-wartortle.toml  0008-wartortle.yaml  0009-blastoise.toml  0009-blastoise.yaml  0010-caterpie.toml  0010-caterpie.yaml  0011-metapod.toml  0011-metapod.yaml  0012-butterfree.toml  0012-butterfree.yaml  0013-weedle.toml  0013-weedle.yaml  0014-kakuna.toml  0014-kakuna.yaml  0015-beedrill.toml  0015-beedrill.yaml  0016-pidgey.toml  0016-pidgey.yaml  (+270 more)
data/trainers/: Aaron.toml  Addison.toml  Aidan.toml  Akane.toml  Akemi.toml  Alistair.toml  Alistasia.toml  Allan.toml  Allyssa.toml  Alphonso.toml  Altimis.toml  Ama.toml  Andreas.toml  Andy.toml  Angela.toml  Anna.toml  Anthony.toml  Antics.toml  Antoine.toml  Archer.toml  Arcturus.toml  Arlo.toml  Armin.toml  Arnie.toml  Arthur.toml  Asmus.toml  Aster.toml  Atreus.toml  Audrey.toml  Aurelia.toml  Austin.toml  Avril.toml  Azzie.toml  Bart.toml  Baxter.toml  Beads.toml  Beau.toml  Bee.toml  Ben.toml  Bert.toml  (+378 more)
data/walkthroughs/: navbar.toml
data/web/: navbar_maps.toml
doc/: add_pokemon.rst
docs/source/: conf.py  index.rst
src/reborn_rebalance/: _hotpatch.py  changelog.py  to_toml.py  to_yaml.py  util.py  web.py
templates/: helpers.html  index.html
templates/_meta/: _root.html  _trainer.html  walkthrough_page.html
templates/changelog/: macros.html  page.html
templates/maps/: single_map.html
templates/moves/: list.html  single.html
templates/species/: list.html  macros.html  single.html
templates/static/: custom.css  dechromify.js  shiny.js  sortable.css  table_search.js
templates/trainers/: single_trainer.html
(+2212 files in other folders)
