[tool.poetry]
name = "reborn-rebalance"
version = "0.7.0"
description = ""
authors = ["Lura Skye <l@veriny.tf>"]
readme = "README.rst"
packages = [{include = "reborn_rebalance", from = "src"}]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.1.0"
cattrs = "^23.1.2"
prettyprinter = "^0.18.0"
jinja2 = "^3.1.2"
pillow = "^10.0.0"
rubymarshal = "^1.2.7"
inflection = "^0.5.1"
unidecode = "^1.3.6"
rtoml = "^0.9.0"
tomli-w = "^1.0.0"
tomlkit = "^0.12.1"

[tool.poetry.scripts]
into-pbs = "reborn_rebalance.scripts.dumping:to_pbs"
into-toml = "reborn_rebalance.scripts.dumping:to_toml"
gen-sprites = "reborn_rebalance.scripts.gen_sprites:gen_all_sprites"
ruby-unmarshal = "reborn_rebalance.scripts.unmarshal:main"
gen-sprite = "reborn_rebalance.scripts.crop_form:run"
gen-web = "reborn_rebalance.web:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
