[tool.poetry]
name = "reborn-rebalance"
version = "0.7.0"
description = ""
authors = ["Lura Skye <l@veriny.tf>"]
readme = "README.rst"
packages = [{include = "reborn_rebalance", from = "src"}]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.1.0"
# has a fix for validation errors not being picklable.
cattrs = {git = "https://github.com/python-attrs/cattrs.git", rev = "992b137223faf3890e9e0d4307f49045b1cf57b7"}
prettyprinter = "^0.18.0"
jinja2 = "^3.1.2"
pillow = "^10.0.0"
rubymarshal = "^1.2.7"
inflection = "^0.5.1"
unidecode = "^1.3.6"
rtoml = "^0.9.0"
tomli-w = "^1.0.0"
tomlkit = "^0.12.1"
tqdm = "^4.65.2"

[tool.poetry.scripts]
into-pbs = "reborn_rebalance.building.to_pbs:build_to_pbs"
into-toml = "reborn_rebalance.building.to_toml:import_to_toml"
ruby-unmarshal = "reborn_rebalance.scripts.unmarshal:main"
build-web = "reborn_rebalance.building.web:main"
unfuck = "reborn_rebalance.scripts.unfuck:main"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
