[tool.poetry]
name = "reborn-rebalance"
version = "0.7.0"
description = ""
authors = ["Lura Skye <l@veriny.tf>"]
readme = "README.rst"
packages = [{include = "reborn_rebalance", from = "src"}]
license = "CC0"

[tool.poetry.dependencies]
python = "^3.11"
attrs = ">=23.2.0"
# has a fix for validation errors not being picklable.
cattrs = ">=23.2.3"
prettyprinter = ">=0.18.0"
jinja2 = ">=3.1.3"
pillow = ">=10.2.0"
rubymarshal = ">=1.2.7"
inflection = ">=0.5.1"
unidecode = ">=1.3.8"
rtoml = ">=0.10.0"
tomli-w = ">=1.0.0"
tomlkit = ">=0.12.3"
tqdm = ">=4.66.2"
typing-extensions = ">=4.9.0"

[tool.poetry.scripts]
into-pbs = "reborn_rebalance.building.to_pbs:build_to_pbs"
into-toml = "reborn_rebalance.building.to_toml:import_to_toml"
ruby-unmarshal = "reborn_rebalance.scripts.unmarshal:main"
build-web = "reborn_rebalance.building.web:main"
copy-compiled-files = "reborn_rebalance.scripts.copy_changes:main"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.2.1"
pyright = ">=1.1.350"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src"]
typeCheckingMode = "basic"

reportImplicitOverride = "warning"
reportUnusedVariable = false
reportIncompatibleVariableOverride = false
reportPrivateUsage = false

[tool.ruff]
target-version = "py311"
respect-gitignore = true
# fix = true
src = ["src/chiru"]
line-length = 100
output-format = "full"

[tool.ruff.lint]
select = [
    "RUF",
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "Q",
    "YTT",
    "PYI",
    "SIM",
    "RET",
    "PERF",
    "PIE",
    "SIM",
    "C4",
]
ignore = [
    "W291",
    "W293",
]

[tool.ruff.lint.per-file-ignores]
"tests/test_*" = ["D"]

[tool.ruff.lint.isort]
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
